--- a/package.json
+++ b/package.json
@@ -3,30 +3,56 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/node": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "@reach/slider": "0.14.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-plugin-transform-remove-imports": "^1.5.2",
+    "clsx": "^1.1.1",
+    "concurrently": "^6.0.0",
+    "date-fns": "^2.16.1",
+    "find-process": "^1.4.4",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^3.11.0",
+    "react-query": "^3.8.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
+    "sass": "^1.32.8",
+    "shelljs": "0.8.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --watchAll=false",
+    "test:vanilla": "npx babel-node --config-file ./scripts/babel-node.config.js --extensions \".ts\",\".tsx\",\".js\" --",
+    "eject": "react-scripts eject",
+    "db:kill": "node scripts/db-kill-port 3030",
+    "db:create": "node scripts/db-create",
+    "db:start": "node scripts/db-start"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "@typescript-eslint/no-unused-vars": 0,
+      "no-unused-vars": 0
+    }
   },
   "browserslist": {
     "production": [
